--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "python-multipart",
     "httpx",
     "pydantic>=2.0",
+    "pydantic-settings>=2.0",
     "convex",
     "docling",
     "python-docx",
