--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "pydantic>=2.0",
     "pydantic-settings>=2.0",
     "convex",
-    "docling",
+    "docling==2.73.0",
     "python-docx",
     "reportlab",
     "sse-starlette",
