--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "reportlab",
     "sse-starlette",
     "python-dotenv",
+    "py7zr",
+    "pymupdf4llm>=0.3.4",
 ]
 
 [dependency-groups]
