feat: Initialize procurement analysis application with document upload, LLM services, and analysis UI, while removing unused image assets.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "sse-starlette",
     "python-dotenv",
     "py7zr",
-    "pymupdf4llm>=0.3.4",
+    "pypdf>=6.0",
 ]
 
 [dependency-groups]
